T6/T-DOP-603/Project/T-DOP-603-STG_10/cadvisor.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor-daemonset
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: cadvisor-daemonset
  template:
    metadata:
      labels:
        name: cadvisor-daemonset
    spec:
      restartPolicy: Always
      containers:
      - name: cadvisor-daemonset
        image: gcr.io/cadvisor/cadvisor:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - name: rootfs
            mountPath: /rootfs
            readOnly: true
          - name: var-run
            mountPath: /var/run
            readOnly: true
          - name: sys
            mountPath: /sys
            readOnly: true
          - name: docker
            mountPath: /var/lib/docker
            readOnly: true
          - name: disk
            mountPath: /dev/disk
            readOnly: true
      volumes:
      - name: rootfs
        hostPath:
          path: /
      - name: var-run
        hostPath:
          path: /var/run
      - name: sys
        hostPath:
          path: /sys
      - name: docker
        hostPath:
          path: /var/lib/docker
      - name: disk
        hostPath:
          path: /dev/disk
