T6/T-DOP-603/Project/T-DOP-603-STG_10/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      restartPolicy: Always
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "128M"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - poll
              topologyKey: "kubernetes.io/hostname"
