T6/T-DOP-603/Project/T-DOP-603-STG_10/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres-deployment
  namespace: default
  labels: 
    app: postgres
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: postgres
  template: 
    metadata: 
      labels: 
        app: postgres
    spec: 
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres:12
        ports:
          - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-claim
