T6/T-DOP-603/Project/T-DOP-603-STG_10/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis-deployment
  namespace: default
  labels: 
    app: redis
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: redis
  template: 
    metadata: 
      labels:
        app: redis
    spec: 
      restartPolicy: Always
      containers: 
      - name: redis
        image: redis:5.0
        ports: 
        - containerPort: 6379
