T6/T-DOP-603/Project/T-DOP-603-STG_10/result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128M"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - result
              topologyKey: "kubernetes.io/hostname"
