T6/T-DOP-603/Project/T-DOP-603-STG_10/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker-deployment
  namespace: default
  labels: 
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
      - name: worker
        image: epitechcontent/t-dop-600-worker:k8s
        resources:
          limits:
            memory: "256M"
