T6/T-DOP-603/Project/T-DOP-603-STG_10/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
  labels:
    app: poll
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: poll
