T6/T-DOP-603/Project/T-DOP-603-STG_10/postgres.service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: postgres-service
  namespace: default
  labels:
    app: postgres
spec: 
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector: 
    app: postgres
