T6/T-DOP-603/Project/T-DOP-603-STG_10/redis.service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: redis-service
  namespace: default
  labels:
    app: redis
spec: 
  type: ClusterIP
  ports: 
    - port: 6379
      targetPort: 6379
  selector: 
    app: redis
