T6/T-DOP-603/Project/T-DOP-603-STG_10/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: default
  labels:
    app: result
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: result
